--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,8 @@
 	</listener>
 
 	<!-- Processes application requests -->
+	
+	<!-- 프론트 컨트롤러 Spring -> DispatcherServlet 정의 -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -25,12 +27,13 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
+<!-- 		서블릿 매핑( / 매핑은 default servlet 동작) -->
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-
+		<!-- 스프링 인코딩 필터 정의 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		
